<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cs246a05.MainActivity">

    <Button
        android:id="@+id/create_explicit"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="92dp"
        android:text="@string/createExpl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_implicit"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="92dp"
        android:text="@string/createImpl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verse" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="119dp"
        android:text="@string/mainActTItle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_implicit" />

    <Button
        android:id="@+id/btnMediaIntents"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:text="@string/strMediaIntents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnAppIntents"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:text="@string/strAppIntents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMediaIntents" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="94dp"
        android:text="@string/strCommonIntentsTitle"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/book"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:hint="Book"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_explicit" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/chapter"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:hint="Chapter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/verse"
        android:layout_width="230dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:hint="Verse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapter" />

</android.support.constraint.ConstraintLayout>